<resources>
    <string name="app_name">ToDo</string>
    <string name="add">Add</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update item</string>
    <string name="editDetails">Edit details:</string>
    <string name="dueDate">Due Date</string>
    <string name="newTask">New Task</string>
    <string name="task">Task</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="details">Details</string>
    <string name="changePriority">Change priority</string>
    <string name="addDetails">Add details here...</string>
    <string name="editTask">Edit task here...</string>
    <string name="completion">Completion check</string>

</resources>
