<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context="com.psd.todo.AddItemFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/addItem_vertical_margin"
        android:paddingLeft="@dimen/addItem_horizontal_margin"
        android:paddingRight="@dimen/addItem_horizontal_margin"
        android:paddingTop="@dimen/addItem_vertical_margin">

        <TextView
            android:id="@+id/newTaskTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/newTask"
            android:theme="@style/ToDoTextView" />

        <EditText
            android:id="@+id/newTaskEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/newTaskTextView" />

        <LinearLayout
            android:id="@+id/newPriorityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newTaskEditText"
            android:layout_marginTop="32dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/priorityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:text="@string/priority"
                android:theme="@style/ToDoTextView" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight=".95"
                android:gravity="left">
                <RadioButton
                    android:id="@+id/lowPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/low" />
                <RadioButton
                    android:id="@+id/normPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/highPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/high" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/newPriorityLayout"
            android:layout_marginTop="32dp"
            android:text="@string/details"
            android:theme="@style/ToDoTextView" />

        <EditText
            android:id="@+id/detailsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/btnLinearLayout"
            android:layout_alignEnd="@+id/btnLinearLayout"
            android:layout_below="@+id/details"
            android:inputType="textMultiLine"
            android:ems="10" />

        <LinearLayout
            android:id="@+id/btnLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/newTaskEditText"
            android:layout_alignEnd="@+id/newTaskEditText"
            android:layout_below="@+id/detailsEditText"
            android:layout_marginTop="32dp"
            android:weightSum="1">

            <Button
                android:id="@+id/cancelItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight=".5"/>

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:theme="@style/ToDoButton"
                android:layout_weight=".5"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
